<resources>
    <string name="app_name">ITI-Android</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="ok">OK</string>
    <string name="your_name">Your name</string>
    <string name="login_form">Login Form</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="football">Football</string>
    <string name="your_hobbies">Your hobbies</string>
    <string name="tennis">Tennis</string>
    <string name="volleyball">Volleyball</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="next">Next</string>
    <string name="login_by">Login By</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="goto_second_activity">Goto Second Activity</string>
</resources>